Add optional 'reviewers' input to create-pr

--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -24,6 +24,11 @@ on:
         description: The repository to create a PR on
         type: string
         required: false
+      recipe-reviewers:
+        description: Add the usual suspects as reviewers for recipe rerun PRs
+        type: boolean
+        required: false
+        default: false
 
 jobs:
 
@@ -48,11 +53,15 @@ jobs:
           echo "Dry run with --base=${{ github.event.repository.default_branch }}, --title=${{ inputs.title }}, --body==${{ inputs.body }}"
           exit 0
         fi
+        REVIEWERS=""
+        if [[ ${{ inputs.recipe-reviewers }} == true ]]; then
+          REVIEWERS="--reviewer jdbeel --reviewer cademack --reviewer jackx111"
+        fi
         if [[ -n "${{ inputs.repo }}" ]]; then
           export GH_TOKEN=${{ secrets.HOWSOAI_WORKFLOW_AUTOMATION_TOKEN }}
-          gh pr create --repo "${{ inputs.repo }}" --base "main" --title "${{ inputs.title }}" --body "${{ inputs.body }}"
+          gh pr create --repo "${{ inputs.repo }}" --base "main" --title "${{ inputs.title }}" --body "${{ inputs.body }}" $REVIEWERS
         else
-          gh pr create --base ${{ github.event.repository.default_branch }} --title "${{ inputs.title }}" --body "${{ inputs.body }}"
+          gh pr create --base ${{ github.event.repository.default_branch }} --title "${{ inputs.title }}" --body "${{ inputs.body }}" $REVIEWERS
         fi
         # To trigger Actions, we must make a commit under the PAT
         sleep 5
