--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -65,6 +65,11 @@ on:
         type: string
         default: './traces'
         required: false
+      telemetry:
+        description: Whether to capture workflow telemetry
+        type: boolean
+        default: true
+        required: false
 
 defaults:
   run:
@@ -83,6 +88,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Collect Workflow Telemetry
+        if: inputs.telemetry == true
         uses: catchpoint/workflow-telemetry-action@v2
         with:
           comment_on_pr: off
