--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -213,8 +213,7 @@ jobs:
           # Adjust MT Howso config for debug mode (MT/Linux/amd64 ONLY)
           if [[ "${{ inputs.debug }}" == "true" && "${{ inputs.amalgam-plat-arch }}" == "linux-amd64" && "${{ inputs.config-fp }}" == *"-mt"* ]]; then
             echo "Enabling AMALGAM_FAST_MEMORY_INTEGRITY..."
-            sed -i "s|-mt|-mt-afmi|g" ${{ inputs.config-fp }}
-            cat ${{ inputs.config-fp }}
+            export HOWSO_CONFIG=./config/latest-mt-debug-howso.yml
           else
             export HOWSO_CONFIG=${{ inputs.config-fp }}
           fi
@@ -269,6 +268,7 @@ jobs:
             # Capture GDB output
             gdb_output=$(gdb -batch -ex run -ex backtrace --args python -m pytest -s ${{ matrix.target }})
             gdb_exit_code=$?
+            echo "$gdb_output"
             # Evaluate GDB exit code and exit this workflow accordingly
             if [[ $gdb_exit_code -ne 0 ]]; then
               # If GDB exited with an error but the test process passed, exit 0
