Added npm run lint to npm-test

--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -27,5 +27,8 @@ jobs:
           echo -e "\n//dpbuild.jfrog.io/:_authToken=${NPM_TOKEN}" >> .npmrc
           npm ci
 
+      - name: Lint
+        run: npm run lint
+
       - name: Test
         run: npm run test
