Permissions expanded to allow for provenance

--- a/.github/workflows/npm-release-open-source.yml
+++ b/.github/workflows/npm-release-open-source.yml
@@ -15,6 +15,10 @@ defaults:
 jobs:
   release:
     runs-on: ubuntu-latest
+    # Permissions expanded to allow for provenance
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - uses: actions/checkout@v4
 
