--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -19,8 +19,6 @@ jobs:
 
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Download and embed Amalgam (WASM)
         if: inputs.upstream-details != ''
@@ -28,14 +26,25 @@ jobs:
           GH_TOKEN: ${{ secrets.HOWSOAI_WORKFLOW_AUTOMATION_CLASSIC_TOKEN }}
         run: |
             echo "Downloading and extracting Amalgam binaries for $plat/$arch..."
-            run_type=$(printf "%s" '${{ inputs.upstream-details }}' | jq -r --arg repo "$repo" '.[$repo]."run_type"')
-            run_id=$(printf "%s" '${{ inputs.upstream-details }}' | jq -r --arg repo "$repo" '.[$repo]."run_id"')
-            gh $run_type download -D amalgam/lib/$plat/$arch -R "howsoai/$repo" -p "*${{ inputs.amalgam-plat-arch }}*" "$run_id"
+            run_type=$(printf "%s" '${{ inputs.upstream-details }}' | jq -r --arg repo "amalgam" '.[$repo]."run_type"')
+            run_id=$(printf "%s" '${{ inputs.upstream-details }}' | jq -r --arg repo "amalgam" '.[$repo]."run_id"')
+            if [[ -z "${run_id}" || -z "${run_type}" || "${run_id}" == "null" || "${run_type}" == "null" ]]; then
+              echo "Amalgam run ID or run type not found (are they present in upstream-details?). Skipping WASM embed."
+              exit 0
+            else
+              echo "Found Amalgam run ID ${run_id}; embedding in src/webassembly."
+            fi
+            gh $run_type download -D src/webassembly -R "howsoai/amalgam" -p "*unknown-wasm64*" "$run_id"
             # Extract binaries
-            cd amalgam/lib/$plat/$arch && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
-            cp lib/* .
+            cd src/webassembly && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
+            cp bin/* .
+            rm -f *.tar.gz
+            rm -rf test-results-unknown-wasm64
+            rm -rf bin
+            rm -rf docs
+            rm -rf *-wasm64
             ls -l
-            cd ../../../..
+            cd ../../
 
       - name: npm audit
         run: npm audit --audit-level=high --omit=dev
