--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -25,7 +25,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.HOWSOAI_WORKFLOW_AUTOMATION_TOKEN }}
         run: |
-            echo "Downloading and extracting Amalgam binaries for $plat/$arch..."
+            echo "Downloading and extracting Amalgam binaries..."
             run_type=$(printf "%s" '${{ inputs.upstream-details }}' | jq -r --arg repo "amalgam" '.[$repo]."run_type"')
             run_id=$(printf "%s" '${{ inputs.upstream-details }}' | jq -r --arg repo "amalgam" '.[$repo]."run_id"')
             if [[ -z "${run_id}" || -z "${run_type}" || "${run_id}" == "null" || "${run_type}" == "null" ]]; then
@@ -34,12 +34,16 @@ jobs:
             else
               echo "Found Amalgam run ID ${run_id}; embedding in src/webassembly."
             fi
-            gh $run_type download -D src/webassembly -R "howsoai/amalgam" -p "*unknown-wasm64*" "$run_id"
+            # Clean out the directory
+            rm -rf src/webassembly
+            mkdir -p src/webassembly
+            gh $run_type download -D src/webassembly -R "howsoai/amalgam" -p "*release-unknown-wasm64*" "$run_id"
             # Extract binaries
             cd src/webassembly && if [ ! -f *.tar.gz ]; then mv */*.tar.gz ./; fi && tar -xvzf *.tar.gz
             cp bin/* .
+            echo "Amalgam version:"
+            cat docs/version.json
             rm -f *.tar.gz
-            rm -rf test-results-unknown-wasm64
             rm -rf bin
             rm -rf docs
             rm -rf *-wasm64
