--- a/.github/workflows/set-metadata.yml
+++ b/.github/workflows/set-metadata.yml
@@ -421,6 +421,7 @@ jobs:
             url=$(echo $url | tr -d '"')
             final_details=$(echo "$final_details" | jq --arg run_id "$ID" --arg repo "amalgam-lang-py" --arg build_date "$build_date" --arg build_title "$build_title" --arg head_sha "$head_sha" --arg url "$url" '. + {($repo): {"run_type": "run", "run_id": ($run_id), "build_date": ($build_date), "build_title": ($build_title), "head_sha": ($head_sha), "url": ($url)}}')
           fi
+          echo "foo"
           if [[ -n "${{ steps.build-howso-engine-py.outputs.run-id }}" ]]; then
             ID=${{ steps.build-howso-engine-py.outputs.run-id }}
             details=$(gh run view --repo howsoai/howso-engine-py $ID --json createdAt,displayTitle,headSha,url)
@@ -434,10 +435,8 @@ jobs:
             url=$(echo $url | tr -d '"')
             final_details=$(echo "$final_details" | jq --arg run_id "$ID" --arg repo "howso-engine-py" --arg build_date "$build_date" --arg build_title "$build_title" --arg head_sha "$head_sha" --arg url "$url" '. + {($repo): {"run_type": "run", "run_id": ($run_id), "build_date": ($build_date), "build_title": ($build_title), "head_sha": ($head_sha), "url": ($url)}}')
           fi
-          echo "Test"
-          #echo "Final upstream details: $final_details"
-          final_upstream_details=$(echo "$final_details" | jq -c)
-          printf "final-upstream-details=%s" '$final_upstream_details' >> $GITHUB_OUTPUT
+          echo "Final upstream details: $final_details"
+          echo "final-upstream-details=$(echo "$final_details" | jq -c)" >> $GITHUB_OUTPUT
 
   set-version:
     needs: ['set-metadata']
